--- a/src/app/app.component.view.html
+++ b/src/app/app.component.view.html
@@ -1,5 +1,5 @@
 <div>
-    <h2>The Standard Search Using 'English- Microsoft'</h2>
+    <!-- <h2>The Standard Search Using 'English- Microsoft'</h2> -->
 
     <div class="form-group">
         <label for="SearchQuery">Enter Search Value</label>
